--- a/index.html
+++ b/index.html
@@ -1,2 +1,63 @@
-<a href="大题.html">Go to 大题 Page</a>
-<a href="选择题.html">Go to 选择 Page</a>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>题目导航页</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            min-height: 100vh;
+            background-color: #f5f7fa;
+            font-family: "Microsoft YaHei", sans-serif;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+        }
+
+        .nav-container {
+            display: flex;
+            flex-direction: column;
+            gap: 24px;
+            width: 100%;
+            max-width: 360px;
+        }
+
+        .nav-link {
+            display: block;
+            padding: 16px 0;
+            background-color: #409eff;
+            color: #fff;
+            text-align: center;
+            text-decoration: none;
+            font-size: 18px;
+            border-radius: 8px;
+            transition: all 0.3s ease;
+            box-shadow: 0 2px 8px rgba(64, 158, 255, 0.2);
+        }
+
+        .nav-link:hover {
+            background-color: #337ecc;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(64, 158, 255, 0.3);
+        }
+
+        .nav-link:active {
+            transform: translateY(0);
+        }
+    </style>
+</head>
+<body>
+    <div class="nav-container">
+        <a href="大题.html" class="nav-link">Go to 大题 Page</a>
+        <a href="选择题.html" class="nav-link">Go to 选择 Page</a>
+    </div>
+</body>
+</html>
