--- a/index.html
+++ b/index.html
@@ -3,61 +3,172 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>题目导航页</title>
+    <title>学习中心 - 导航首页</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
+        :root {
+            --primary-gradient: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+            --bg-color: #f7f9fc;
+            --card-bg: #ffffff;
+            --text-main: #1a1a1a;
+            --text-secondary: #7f8c8d;
+            --accent-purple: #6a11cb;
+            --accent-blue: #2575fc;
         }
 
         body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+            background-color: var(--bg-color);
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
             min-height: 100vh;
-            background-color: #f5f7fa;
-            font-family: "Microsoft YaHei", sans-serif;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
         }
 
-        .nav-container {
-            display: flex;
-            flex-direction: column;
-            gap: 24px;
+        /* 顶部欢迎区 - 采用蓝紫色渐变 */
+        header {
+            background: var(--primary-gradient);
+            padding: 60px 20px;
+            color: white;
+            text-align: left;
+            border-radius: 0 0 30px 30px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 26px;
+            font-weight: bold;
+        }
+
+        header p {
+            margin-top: 10px;
+            opacity: 0.9;
+            font-size: 14px;
+            line-height: 1.5;
+        }
+
+        /* 菜单容器 */
+        .menu-container {
+            padding: 30px 15px;
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: 18px;
+            max-width: 500px;
+            margin: -20px auto 0 auto; /* 向上偏移产生重叠效果 */
             width: 100%;
-            max-width: 360px;
+            box-sizing: border-box;
         }
 
-        .nav-link {
-            display: block;
-            padding: 16px 0;
-            background-color: #409eff;
-            color: #fff;
-            text-align: center;
+        /* 导航卡片样式 */
+        .nav-card {
+            background: var(--card-bg);
+            border-radius: 18px;
+            padding: 22px;
+            display: flex;
+            align-items: center;
             text-decoration: none;
+            transition: all 0.2s ease;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+            border: 1px solid rgba(255,255,255,0.8);
+        }
+
+        /* 点击动效 */
+        .nav-card:active {
+            transform: scale(0.96);
+            background-color: #f0f3ff;
+        }
+
+        /* 图标区域样式 */
+        .icon-box {
+            width: 56px;
+            height: 56px;
+            border-radius: 14px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 26px;
+            margin-right: 18px;
+            flex-shrink: 0;
+        }
+
+        /* 针对大题和选择题区分图标底色 */
+        .icon-dati {
+            background: rgba(106, 17, 203, 0.1);
+            color: var(--accent-purple);
+        }
+
+        .icon-xuanze {
+            background: rgba(37, 117, 252, 0.1);
+            color: var(--accent-blue);
+        }
+
+        /* 文字区域 */
+        .info-box {
+            flex-grow: 1;
+        }
+
+        .info-box h2 {
+            margin: 0;
             font-size: 18px;
-            border-radius: 8px;
-            transition: all 0.3s ease;
-            box-shadow: 0 2px 8px rgba(64, 158, 255, 0.2);
+            color: var(--text-main);
+            font-weight: 600;
         }
 
-        .nav-link:hover {
-            background-color: #337ecc;
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(64, 158, 255, 0.3);
+        .info-box p {
+            margin: 4px 0 0 0;
+            font-size: 13px;
+            color: var(--text-secondary);
         }
 
-        .nav-link:active {
-            transform: translateY(0);
+        /* 右侧箭头图标 */
+        .arrow {
+            color: #d1d1d1;
+            font-size: 18px;
+            font-weight: bold;
+        }
+
+        /* 底部信息 */
+        footer {
+            margin-top: auto;
+            padding: 40px 20px;
+            text-align: center;
+            color: #bdc3c7;
+            font-size: 12px;
+            letter-spacing: 1px;
         }
     </style>
 </head>
 <body>
-    <div class="nav-container">
-        <a href="大题.html" class="nav-link">Go to 大题 Page</a>
-        <a href="选择题.html" class="nav-link">Go to 选择 Page</a>
+
+    <header>
+        <h1>学习中心</h1>
+        <p>每一份努力，都是通往成功的阶梯。<br>请选择您要复习的模块：</p>
+    </header>
+
+    <div class="menu-container">
+        <a href="大题.html" class="nav-card">
+            <div class="icon-box icon-dati">📝</div>
+            <div class="info-box">
+                <h2>大题练习</h2>
+                <p>15 道重点简答题全解析</p>
+            </div>
+            <div class="arrow">❯</div>
+        </a>
+
+        <a href="选择题.html" class="nav-card">
+            <div class="icon-box icon-xuanze">✔</div>
+            <div class="info-box">
+                <h2>选择题库</h2>
+                <p>核心考点自测与知识点巩固</p>
+            </div>
+            <div class="arrow">❯</div>
+        </a>
     </div>
+
+    <footer>
+        © 2025 思想政治理论学习平台
+    </footer>
+
 </body>
 </html>
